@@ -1,6 +1,16 @@
 2006-12-21  Inge Wallin  <inge@lysator.liu.se>
 
+	Fourth step, part 2 of wish 117960
+	Put the config dialog in dialogs/
+	* Move:
+	kchartParameterConfigPage  -->  dialogs/KCConfigAxesPage
+	kchartColorConfigPage      -->  dialogs/KCConfigColorPage
+	kchartFontConfigPage       -->  dialogs/KCConfigFontPage
+
+2006-12-21  Inge Wallin  <inge@lysator.liu.se>
+
 	Fourth step, part 1 of wish 117960
+	Put the config dialog in dialogs/
 	* Move:
 	kchartConfigDialog                -->  dialogs/KCConfigDialog
 	kchartDataConfigPage              -->  dialogs/KCConfigDataPage
